替换图片路径

--- a/system-design/naming/index.html
+++ b/system-design/naming/index.html
@@ -10918,9 +10918,9 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
 </div><p>这是一个由国人开发的网站，网上有很多人称其为变量命名神器， 我在实际使用了几天之后感觉没那么好用。小伙伴们可以自行体验一下，然后再给出自己的判断。</p>
 <p>Codelf 提供了在线网站版本，网址：<a class="gdoc-markdown__link" href="https://unbug.github.io/codelf/">https://unbug.github.io/codelf/</a>，具体使用情况如下：</p>
 <p>我选择了 Java 编程语言，然后搜索了“序列化”这个关键词，然后它就返回了很多关于序列化的命名。</p>
-<p><img src="pictures/Codelf.png" alt=""  /></p>
+<p><img src="images/Codelf.png" alt=""  /></p>
 <p>并且，Codelf 还提供了 VS code 插件，看这个评价，看来大家还是很喜欢这款命名工具的。</p>
-<p><img src="pictures/vscode-codelf.png" alt=""  /></p>
+<p><img src="images/vscode-codelf.png" alt=""  /></p>
 <div class="gdoc-page__anchorwrap">
     <h2 id="相关阅读推荐">
         相关阅读推荐
