--- a/cs-basics/data-structure/图/index.html
+++ b/cs-basics/data-structure/图/index.html
@@ -10763,7 +10763,7 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
 <p>但是，图形结构的元素之间的关系是任意的。</p>
 <p><strong>何为图呢？</strong> 简单来说，图就是由顶点的有穷非空集合和顶点之间的边组成的集合。通常表示为：<strong>G(V,E)</strong>，其中，G表示一个图，V表示顶点的集合，E表示边的集合。</p>
 <p>下图所展示的就是图这种数据结构，并且还是一张有向图。</p>
-<p><img src="pictures/%e5%9b%be/%e5%9b%be.png" alt="图"  /></p>
+<p><img src="images/%e5%9b%be/%e5%9b%be.png" alt="图"  /></p>
 <p>图在我们日常生活中的例子很多！比如我们在社交软件上好友关系就可以用图来表示。</p>
 <div class="gdoc-page__anchorwrap">
     <h2 id="图的基本概念">
@@ -10835,9 +10835,9 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
 </div><p>邻接矩阵将图用二维矩阵存储，是一种较为直观的表示方式。</p>
 <p>如果第i个顶点和第j个顶点之间有关系，且关系权值为n，则 <code>A[i][j]=n</code> 。</p>
 <p>在无向图中，我们只关心关系的有无，所以当顶点i和顶点j有关系时，<code>A[i][j]</code>=1，当顶点i和顶点j没有关系时，<code>A[i][j]</code>=0。如下图所示：</p>
-<p><img src="pictures/%e5%9b%be/%e6%97%a0%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e7%9f%a9%e9%98%b5%e5%ad%98%e5%82%a8.png" alt="无向图的邻接矩阵存储"  /></p>
+<p><img src="images/%e5%9b%be/%e6%97%a0%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e7%9f%a9%e9%98%b5%e5%ad%98%e5%82%a8.png" alt="无向图的邻接矩阵存储"  /></p>
 <p>值得注意的是：<strong>无向图的邻接矩阵是一个对称矩阵，因为在无向图中，顶点i和顶点j有关系，则顶点j和顶点i必有关系。</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%9c%89%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e7%9f%a9%e9%98%b5%e5%ad%98%e5%82%a8.png" alt="有向图的邻接矩阵存储"  /></p>
+<p><img src="images/%e5%9b%be/%e6%9c%89%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e7%9f%a9%e9%98%b5%e5%ad%98%e5%82%a8.png" alt="有向图的邻接矩阵存储"  /></p>
 <p>邻接矩阵存储的方式优点是简单直接（直接使用一个二维数组即可），并且，在获取两个定点之间的关系的时候也非常高效（直接获取指定位置的数组元素的值即可）。但是，这种存储方式的缺点也比较明显，那就是比较浪费空间，</p>
 <div class="gdoc-page__anchorwrap">
     <h3 id="邻接表存储">
@@ -10848,8 +10848,8 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
     </h3>
 </div><p>针对上面邻接矩阵比较浪费内存空间的问题，诞生了图的另外一种存储方法—<strong>邻接表</strong> 。</p>
 <p>邻接链表使用一个链表来存储某个顶点的所有后继相邻顶点。对于图中每个顶点Vi，把所有邻接于Vi的顶点Vj链成一个单链表，这个单链表称为顶点Vi的 <strong>邻接表</strong>。如下图所示：</p>
-<p><img src="pictures/%e5%9b%be/%e6%97%a0%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e8%a1%a8%e5%ad%98%e5%82%a8.png" alt="无向图的邻接表存储"  /></p>
-<p><img src="pictures/%e5%9b%be/%e6%9c%89%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e8%a1%a8%e5%ad%98%e5%82%a8.png" alt="有向图的邻接表存储"  /></p>
+<p><img src="images/%e5%9b%be/%e6%97%a0%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e8%a1%a8%e5%ad%98%e5%82%a8.png" alt="无向图的邻接表存储"  /></p>
+<p><img src="images/%e5%9b%be/%e6%9c%89%e5%90%91%e5%9b%be%e7%9a%84%e9%82%bb%e6%8e%a5%e8%a1%a8%e5%ad%98%e5%82%a8.png" alt="有向图的邻接表存储"  /></p>
 <p>大家可以数一数邻接表中所存储的元素的个数以及图中边的条数，你会发现：</p>
 <ul>
 <li>在无向图中，邻接表元素个数等于边的条数的两倍，如左图所示的无向图中，边的条数为7，邻接表存储的元素个数为14。</li>
@@ -10870,20 +10870,20 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
         </a>
     </h3>
 </div><p>广度优先搜索就像水面上的波纹一样一层一层向外扩展，如下图所示：</p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a2%e5%9b%be%e7%a4%ba.png" alt="广度优先搜索图示"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a2%e5%9b%be%e7%a4%ba.png" alt="广度优先搜索图示"  /></p>
 <p><strong>广度优先搜索的具体实现方式用到了之前所学过的线性数据结构——队列</strong> 。具体过程如下图所示：</p>
 <p><strong>第1步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a21.png" alt="广度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a21.png" alt="广度优先搜索1"  /></p>
 <p><strong>第2步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a22.png" alt="广度优先搜索2"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a22.png" alt="广度优先搜索2"  /></p>
 <p><strong>第3步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a23.png" alt="广度优先搜索3"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a23.png" alt="广度优先搜索3"  /></p>
 <p><strong>第4步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a24.png" alt="广度优先搜索4"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a24.png" alt="广度优先搜索4"  /></p>
 <p><strong>第5步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a25.png" alt="广度优先搜索5"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a25.png" alt="广度优先搜索5"  /></p>
 <p><strong>第6步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a26.png" alt="广度优先搜索6"  /></p>
+<p><img src="images/%e5%9b%be/%e5%b9%bf%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a26.png" alt="广度优先搜索6"  /></p>
 <div class="gdoc-page__anchorwrap">
     <h3 id="深度优先搜索">
         深度优先搜索
@@ -10892,20 +10892,20 @@ License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL
         </a>
     </h3>
 </div><p>深度优先搜索就是“一条路走到黑”，从源顶点开始，一直走到没有后继节点，才回溯到上一顶点，然后继续“一条路走到黑”，如下图所示：</p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a2%e5%9b%be%e7%a4%ba.png" alt="深度优先搜索图示"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a2%e5%9b%be%e7%a4%ba.png" alt="深度优先搜索图示"  /></p>
 <p><strong>和广度优先搜索类似，深度优先搜索的具体实现用到了另一种线性数据结构——栈</strong> 。具体过程如下图所示：</p>
 <p><strong>第1步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a21.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a21.png" alt="深度优先搜索1"  /></p>
 <p><strong>第2步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a22.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a22.png" alt="深度优先搜索1"  /></p>
 <p><strong>第3步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a23.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a23.png" alt="深度优先搜索1"  /></p>
 <p><strong>第4步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a24.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a24.png" alt="深度优先搜索1"  /></p>
 <p><strong>第5步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a25.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a25.png" alt="深度优先搜索1"  /></p>
 <p><strong>第6步：</strong></p>
-<p><img src="pictures/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a26.png" alt="深度优先搜索1"  /></p>
+<p><img src="images/%e5%9b%be/%e6%b7%b1%e5%ba%a6%e4%bc%98%e5%85%88%e6%90%9c%e7%b4%a26.png" alt="深度优先搜索1"  /></p>
 
     </article>
 
