--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
     <script>
         function pageJump(WXULR) {
+            console.log(WXULR)
             wx.miniProgram.navigateTo({
                 url: WXULR
             });
