--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsv1xrn6e25eKmz0sumBpyA1PUX_7uzXk_471FUpLmYr7k81iIBSdY3GceOwRYEFSTVMY&amp;usqp=CAU"
     />
-    <link rel="stylesheet" href="/umi.331878c1.css" />
+    <link rel="stylesheet" href="umi.331878c1.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -33,6 +33,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.3ddae9f8.js"></script>
+    <script src="umi.3ddae9f8.js"></script>
   </body>
 </html>
